--- a/Develop/templates/main.html
+++ b/Develop/templates/main.html
@@ -21,7 +21,7 @@
       .cube {
         position: absolute;
         left: 50%;
-        top: 300px;
+        /* top: 300px; */
         margin-left: -200px;
       }
 
@@ -121,12 +121,13 @@
       </div>
     </div>
     -------------------------
+    <br /><br /><br /><br /><br /><br /><br /><br />
     <div id="experiment">
       <div class="cube">
         <div class="topFace">
           <div>
             <h1>${data.name}</h1>
-            <h3>${data.position}</h3>
+            <h3>Manager</h3>
             <h3>ID: ${data.id}</h3>
           </div>
         </div>
@@ -139,6 +140,58 @@
           <h2>
             ${data.office}
           </h2>
+        </div>
+      </div>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div id="experiment">
+      <div class="cube">
+        <div class="topFace">
+          <div>
+            <h1>${data.name}</h1>
+            <h3>Engineer</h3>
+            <h3>ID: ${data.id}</h3>
+          </div>
+        </div>
+        <div class="leftFace">
+          <h1>Email:</h1>
+          <h3><a href="mailto:${data.email}"></a>${data.email}</h3>
+        </div>
+        <div class="rightFace">
+          <h1>GitHub:</h1>
+          <h3>
+            ${data.github}
+          </h3>
+        </div>
+      </div>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br />
+
+    <div id="experiment">
+      <div class="cube">
+        <div class="topFace">
+          <div>
+            <h1>${data.name}</h1>
+            <h3>Intern</h3>
+            <h3>ID: ${data.id}</h3>
+          </div>
+        </div>
+        <div class="leftFace">
+          <h1>Email:</h1>
+          <h3><a href="mailto:${data.email}"></a>${data.email}</h3>
+        </div>
+        <div class="rightFace">
+          <h1>School:</h1>
+          <h3>
+            ${data.school}
+          </h3>
         </div>
       </div>
     </div>
