--- a/Develop/templates/engineer.html
+++ b/Develop/templates/engineer.html
@@ -1,13 +1,25 @@
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">{{ name }}</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>{{ role }}</h3>
+<br /><br /><br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br /><br /><br /><br />
+
+<div id="experiment">
+  <div class="cube">
+    <div class="topFace engineer">
+      <div>
+        <h1>{{ name }}</h1>
+        <h3 class="engineer-text">ENGINEER</h3>
+        <h3>ID: {{ id }}</h3>
+      </div>
     </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: {{ id }}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
-        </ul>
+    <div class="leftFace">
+      <h1>Email:</h1>
+      <h3><a href="mailto:{{ email }}">{{ email }}</a></h3>
     </div>
+    <div class="rightFace">
+      <h1>GitHub:</h1>
+      <h2>
+        <a href="github.com/{{ github }}">{{ github }}</a>
+      </h2>
+    </div>
+  </div>
 </div>
